--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -129,7 +129,7 @@ canvas#overlay {
   }
 
   .link{
-    font-size:large;
+    font-size:3rem;
     text-underline-offset: 0.4em;
   }
   
@@ -146,7 +146,8 @@ canvas#overlay {
     padding:1em;
     margin:1em;
     background-color:rgba(0,0,0,0.5);
-    border-radius:1em;
-    border:1px solid lightgray;
+    // border-radius:1em;
+    // border:1px solid lightgray;
+    font-size:2rem;
     // max-width:800px;
   }
